# pyndakaas

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-on-release.yml  verify-on-push.yml
src/pyndakaas/: __init__.py  front_matter_parsers.py  handler.py  processing.py  renderer.py
