[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyndakaas"
version = "0.2.1"
description = "An extensible static site generator."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Ruben van Nieuwpoort", email = "ruben@vannieuwpoort.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "Jinja2>=3",
]

[project.optional-dependencies]
dev = [
  "types-Jinja2",
  "flake8>=7.3",
  "mypy>=1.18",
]

[project.urls]
homepage = "https://github.com/rubenvannieuwpoort/pyndakaas"
